@@ -358,11 +358,11 @@ vfs.browser.colors.2.glob={build.xml,makefile*}
 vfs.browser.colors.2.color=#666600
 vfs.browser.colors.3.glob=*.{gif,jpg,jpeg,png,bmp,xpm,svg}
 vfs.browser.colors.3.color=#009933
-vfs.browser.colors.4.glob=*.{gz,jar,zip,tgz,z}
+vfs.browser.colors.4.glob=*.{gz,jar,zip,tgz,z,war,ear}
 vfs.browser.colors.4.color=#990000
 vfs.browser.colors.5.glob=tags
 vfs.browser.colors.5.color=#003366
-vfs.browser.colors.6.glob=*.{sh,bat}
+vfs.browser.colors.6.glob=*.{sh,bat,cmd}
 vfs.browser.colors.6.color=#006666
 vfs.browser.colors.7.glob={CHANGELOG,CHANGES,INSTALL,LICENSE,NEWS,README,TODO}{,.txt}
 vfs.browser.colors.7.color=#330066
